# 1017-pack

./: .gitignore  CMakeLists.txt  GITHUB_SETUP.md  README.md
.github/workflows/: build.yml
Lemonade/: CMakeLists.txt
Lemonade/Source/: PluginEditor.cpp  PluginProcessor.cpp
Shared/: LookAndFeel1017.h
TrapHouse/: CMakeLists.txt
TrapHouse/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
TrapHouse/Source/dsp/: Clipper.h  ScopeBuffer.h
TrapHouse/Source/ui/: ScopeDisplay.h  TycoonGame.h
dsp_validation/: clipper_standalone.cpp
